# FaceRecogGUI

./: Alib.py  DIYP-R1.avi  EVM2.py  FaceRecognition.py  Manager5.py  Nh.py  README.md  lk2.py  mainFrame.py  markoptnh.py  spoofyingtest.txt  test5.py
Alignment/: Alib.py  align.py  imgsdata.py
Alignment/Train/: CMakeLists.txt  train.cpp  train_shape_predictor.py
Classifier/: classifier.py
Detect/HOG/: hog.py
Detect/Harr-like/: main.py  train.py
Manager/: .py  FaceEntrance.sqlite  Manager.py  Manager2.py  main.py
Manager/tools/: ChildrenForm.py  ChildrenForm2.py  ChildrenForm2.ui  ChildrenForm3.py  ChildrenForm3.ui  ChildrenForm3_yewuwenjian.py  MainForm.py  MainForm.ui  addcol.py  main.lua  main.py  mainfile.py  testoffiler.py
Record/: DIYA-R1.avi
Represent/: dataset.lua  main.lua
Train/: data.lua  dataset.lua  donkey.lua  main.lua  model.lua  nn4.small.lua  train.lua
Train-Features/: classifier.pkl  labels.csv  reps.csv
TrainData-Aligned/: cache.t7
TrainData-Aligned-Opt/: cache.t7
